<resources>
    <string name="app_name">NavApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_developer">Developer</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="create">Create a new account</string>
    <string name="silahkan">Silahkan Login</string>
    <string name="sign_in">Sign-in</string>
</resources>