<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/logotext"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tvsilahkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:textAlignment="center"
            android:text="@string/silahkan"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tvsilahkan"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="@dimen/fab_margin"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/hint_username"
            android:textColorHint="@color/grey"
            android:textAlignment="center"
            android:autofillHints="@string/hint_username"
            android:inputType="text"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etUsername"
            android:layout_marginBottom="@dimen/fab_margin"
            android:drawableStart="@drawable/ic_pass"
            android:hint="@string/hint_password"
            android:textColorHint="@color/grey"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:autofillHints="@string/hint_password"
            android:textColor="@color/black"/>

        <Button
            android:background="@drawable/btn_sign_in"
            android:hint="@string/sign_in"
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_below="@id/btnLogin"
            android:layout_marginTop="10dp"
            android:textAlignment="center"/>
    </RelativeLayout>

</LinearLayout>